--- a/site/src/examples/js/angular_component.ts.ejs
+++ b/site/src/examples/js/angular_component.ts.ejs
@@ -15,7 +15,7 @@ import { IntlTelInputComponent } from "../../../build/intl-tel-input/angular/Int
           formControlName="phone"
           name="phone"
           [initOptions]="initOptions"
-          [inputProps]="{ class: 'form-control' }"
+          [inputProps]="{ class: 'form-control', title: 'Enter your phone number' }"
         />
       </div>
       <div class="col-auto">
