--- a/site/src/examples/js/react_component.js.ejs
+++ b/site/src/examples/js/react_component.js.ejs
@@ -51,6 +51,7 @@ const App = () => {
           }}
           inputProps={{
             name: "phone",
+            title: "Enter your phone number",
             onBlur: () => setNoticeMode("blur"),
             className: "form-control",
           }}
