--- a/site/src/examples/js/svelte_component.svelte.ejs
+++ b/site/src/examples/js/svelte_component.svelte.ejs
@@ -37,6 +37,7 @@
       }}
       inputProps={{
         class: "form-control",
+        title: "Enter your phone number",
       }}
     />
   </div>
