--- a/site/src/examples/js/vue_component.vue.ejs
+++ b/site/src/examples/js/vue_component.vue.ejs
@@ -38,6 +38,7 @@
         }"
         :inputProps="{
           class: 'form-control',
+          title: 'Enter your phone number',
         }"
       />
     </div>
